--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
 <string name="fechar">Fechar</string>
 <string name="abrir">Abrir</string>
 <string name="mainactivity">MainActivity</string>
+    <string name="todo">TODO</string>
 </resources>
